test/tests/good/transmute-mono.carth
;; -1337

(import std)

(defun main [Unit]
  (display (show-int ((: transmute (Fun [Nat] Int)) (cast 18446744073709550279)))))
