test/tests/bad/cast-poly2.carth
;; NoClassInstance

(import std)

(defun foo [a]
  (cast a))

(defun bar [Unit] :of (Fun [Unit] Int)
  (foo (Some 5)))
